--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <span>Prawa zastrzeżone © 2022</span>
                 <div class="footer-copyright__logo">
                     <span>made by</span>
-                    <img src="public/images/logo-full-light.svg" alt="logo twórcy" />
+                    <a href="https://adrespect.pl/" target="_blank"><img src="public/images/logo-full-light.svg" alt="logo adrespect.pl" /></a>
                 </div>
             </div>
         </div>
