--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>giarddesign</title>
     <meta name="description" content="Nowoczesna aranżacja Twojego ogrodu">
     <meta name="robots" content="noindex,nofollow">
+    <link rel="icon" type="image/x-icon" href="public/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
